--- a/04-cSS/stylecss.css
+++ b/04-cSS/stylecss.css
@@ -7,7 +7,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-    height: 50rem;
+    height: 250px;
 }
 ul{
     color: greenyellow;
